--- a/EmployeeManagement/EmployeeManagement/appsettings.json
+++ b/EmployeeManagement/EmployeeManagement/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "connectDB": "Data Source=.;Initial Catalog=Company;Integrated Security=True;TrustServerCertificate=True;" }
+  "ConnectionStrings": { "connectDB": "Data Source=.;Initial Catalog=Employee;Integrated Security=True;TrustServerCertificate=True;" }
 }
