--- a/EmployeeManagement/Application/EmployeeManagement.Application.csproj
+++ b/EmployeeManagement/Application/EmployeeManagement.Application.csproj
@@ -8,6 +8,16 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\EmployeeManagement.Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure\EmployeeManagement.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
   </ItemGroup>
 
 </Project>
