--- a/EmployeeManagement/Domain/EmployeeManagement.Domain.csproj
+++ b/EmployeeManagement/Domain/EmployeeManagement.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="EFCore.AutomaticMigrations.NetTopologySuite" Version="7.0.5" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
       <PrivateAssets>all</PrivateAssets>
@@ -18,6 +19,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\" />
   </ItemGroup>
 
 </Project>
