--- a/EmployeeManagement/Infrastructure/EmployeeManagement.Infrastructure.csproj
+++ b/EmployeeManagement/Infrastructure/EmployeeManagement.Infrastructure.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application\EmployeeManagement.Application.csproj" />
     <ProjectReference Include="..\Domain\EmployeeManagement.Domain.csproj" />
   </ItemGroup>
 
