--- a/EmployeeManagement/Application/EmployeeManagement.Application.csproj
+++ b/EmployeeManagement/Application/EmployeeManagement.Application.csproj
@@ -8,16 +8,18 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\EmployeeManagement.Domain.csproj" />
-    <ProjectReference Include="..\Infrastructure\EmployeeManagement.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Common\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
